# perlemir-api

./: .gitignore  LICENSE  Pipfile  README.md  app.py  architecture.md  aux.py  develop.py  pyproject.toml
bot/: bot_fun.py
client/: .gitignore  package.json  snowpack.config.js  tsconfig.json
client/view/: app.css
client/view/bot/: BotControlPanel.tsx  BotInstanceCard.tsx
client/view/dashboard/: Dashboard.tsx
config/: config.py
objects/: User.py
perlemir_api/bot/: bot_fun.py
perlemir_api/config/: config.py  database.py
perlemir_api/ud/: users.json
perlemir_api/user/: user_fun.py
ud/: ladair
user/: user_fun.py
